# nio-client

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  build.rs
examples/: check.rs  list.rs  server.rs  watch.rs  write.rs
examples/webapp/: README.md  app.rs  backend.rs  main.rs
proto/: iam.proto
src/: auth.rs  axum.rs  error.rs  lib.rs  memo.rs  session.rs
tests/: check.rs  live.rs  mock.rs  run_tests.sh
