[package]
name = "nio-client"
version = "0.1.0"
description = "Client for nio authentication and authorization."
edition = "2021"
license-file = "LICENSE"
rust-version = "1.83"
readme = "README.md"
#homepage = ""
#documentation = "https://docs.rs/"
repository = "https://github.com/ecociel/nio-client"
license = "MIT"
authors = ["Jan Algermissen <jan.algermissen@ecociel.ch>"]
keywords = ["nio", "authentication", "authorization"]
categories = ["web-programming::http-client"]



[build-dependencies]
tonic-build = "0.13.0"

[dependencies]
axum = { version = "0.8.3", optional = true }
axum-extra = { version = "0.10.1", features = ["typed-header"], optional = true }
chrono = "0.4.34"
http = "1.3.1"
headers = "0.4.0"
log = "0.4.28"
prost = "0.13.5"
prost-types = "0.13.5"
thiserror = "1"
tokio = { version = "1.0" }
#tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.13.0" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }

[features]
default = []
axum = ["dep:axum", "dep:axum-extra"]

[[example]]
name = "check"
path = "examples/check.rs"
required-features = ["axum"]

[[example]]
name = "list"
path = "examples/list.rs"
required-features = ["axum"]
