[package]
name = "nio-client"
version = "0.2.0"
description = "Client for nio authentication and authorization."
edition = "2021"
rust-version = "1.83"
readme = "README.md"
repository = "https://github.com/ecociel/nio-client"
license = "MIT"
authors = ["Jan Algermissen <jan.algermissen@ecociel.ch>"]
keywords = ["nio", "authentication", "authorization"]
categories = ["web-programming::http-client"]

[build-dependencies]
tonic-build = "0.13.0"

[dependencies]
axum = { version = "0.8.3", optional = true }
axum-extra = { version = "0.10.1", features = ["typed-header"], optional = true }
chrono = "0.4.34"
futures = "0.3"
headers = "0.4.0"
hex = "0.4"
http = "1.3.1"
log = "0.4.28"
prost = "0.13.5"
prost-types = "0.13.5"
rand = "0.8"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1.0", features = ["sync", "rt", "time"] }
tonic = { version = "0.13.0", features = ["tls-ring"] }

[dev-dependencies]
axum = "0.8.3"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "signal", "test-util"] }
tokio-stream = { version = "0.1", features = ["net"] }

[features]
default = []
axum = ["dep:axum", "dep:axum-extra"]
# Opt-in live-server integration tests (tests/live.rs); require a running
# check reachable at NIO_CHECK_URI.
live-tests = []

[[example]]
name = "check"
path = "examples/check.rs"

[[example]]
name = "list"
path = "examples/list.rs"

[[example]]
name = "write"
path = "examples/write.rs"

[[example]]
name = "watch"
path = "examples/watch.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["axum"]
